--- a/app/src/main/res/layout/fragment_recipe_viewer.xml
+++ b/app/src/main/res/layout/fragment_recipe_viewer.xml
@@ -1,3 +1,4 @@
+<!--FIXME REPLACE RecyclerView with another solution-->
 <android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/recipe_steps_rv"
