--- a/app/src/main/res/layout/fragment_recipe_viewer.xml
+++ b/app/src/main/res/layout/fragment_recipe_viewer.xml
@@ -1,9 +1,8 @@
 <!--FIXME REPLACE RecyclerView with another solution-->
-<android.support.v7.widget.RecyclerView
+<android.support.v4.view.ViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/recipe_steps_rv"
+    android:id="@+id/recipe_steps_vp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="horizontal" >
+    android:layout_height="match_parent">
 
-</android.support.v7.widget.RecyclerView>
+</android.support.v4.view.ViewPager>
