--- a/app/src/main/res/layout/fragment_recipe_viewer_step.xml
+++ b/app/src/main/res/layout/fragment_recipe_viewer_step.xml
@@ -35,14 +35,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/step_header_tv" />
 
-    <!--Step content-->
-    <TextView
-        android:id="@+id/step_content_tv"
-        android:layout_width="0dp"
+    <!--Step Image-->
+    <ImageView
+        android:id="@+id/step_thumbnail_iv"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/separator_v"
-        tools:text="@tools:sample/lorem/random"/>
+        app:layout_constraintTop_toTopOf="@+id/separator_v"
+        android:visibility="gone"/>
+
+    <!--TODO Add player-->
+
+    <!--Step content-->
+    <TextView
+    android:id="@+id/step_content_tv"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/step_thumbnail_iv"
+    tools:text="@tools:sample/lorem/random" />
 
 </android.support.constraint.ConstraintLayout>
