JB: Replaced ViewPager with Master-Detail flow

--- a/app/src/main/res/layout/fragment_recipe_viewer_step.xml
+++ b/app/src/main/res/layout/fragment_recipe_viewer_step.xml
@@ -48,6 +48,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/separator_v" />
 
+    <!--Step player loading-->
+    <ProgressBar
+        android:id="@+id/step_video_loading_pb"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/discovery_item_loading_height"
+        android:layout_margin="@dimen/discovery_item_loading_margin"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/step_thumbnail_iv" />
+
     <!--Step player-->
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/step_video_pv"
@@ -56,7 +67,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/step_thumbnail_iv" />
+        app:layout_constraintTop_toBottomOf="@+id/step_video_loading_pb" />
 
     <!--Step content-->
     <TextView
@@ -65,7 +76,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/step_video_pv"
         tools:text="@tools:sample/lorem/random" />
