--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="discovery_item_height" >277dp</dimen>
-    <dimen name="discovery_item_loading_height" >70dp</dimen>
-    <dimen name="discovery_item_loading_margin" >8dp</dimen>
-    <dimen name="discovery_item_image_text_margin" >4dp</dimen>
-    <dimen name="discovery_item_image_text_margin_top" >16dp</dimen>
-    <dimen name="movie_detail_image_height" >@dimen/discovery_item_height</dimen>
-    <dimen name="movie_detail_image_width" >185dp</dimen>
-    <dimen name="movie_detail_image_margin_left" >32dp</dimen>
-    <dimen name="movie_detail_image_margin_top" >16dp</dimen>
+    <dimen name="discovery_item_height">277dp</dimen>
+    <dimen name="discovery_item_loading_height">70dp</dimen>
+    <dimen name="discovery_item_loading_margin">8dp</dimen>
+    <dimen name="discovery_item_image_text_margin">4dp</dimen>
+    <dimen name="discovery_item_image_text_margin_top">16dp</dimen>
+    <dimen name="movie_detail_image_height">@dimen/discovery_item_height</dimen>
+    <dimen name="movie_detail_image_width">185dp</dimen>
+    <dimen name="movie_detail_image_margin_left">32dp</dimen>
+    <dimen name="movie_detail_image_margin_top">16dp</dimen>
     <dimen name="movie_detail_aside_margin_left">32dp</dimen>
     <dimen name="movie_detail_aside_margin_top">16dp</dimen>
     <dimen name="movie_detail_year_text_size">28sp</dimen>
@@ -21,4 +21,8 @@
     <dimen name="movie_detail_separator_thickness">2dp</dimen>
     <dimen name="movie_detail_sub_separator_thickness">1dp</dimen>
     <dimen name="movie_detail_video_item_width">48dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="app_bar_height">200dp</dimen>
+    <dimen name="item_width">200dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
