--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.bakingapp.activity.DiscoveryActivity">
+    tools:context="com.example.android.bakingapp.activity.MainActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/discovery_list_rv"
