--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/discovery_item_image_iv"
+        android:id="@+id/recipe_image_iv"
         android:layout_width="match_parent"
         android:layout_height="@dimen/discovery_item_height"
         android:scaleType="centerCrop"
@@ -14,11 +14,11 @@
     </ImageView>
 
     <TextView
-        android:id="@+id/discovery_item_title_tv"
+        android:id="@+id/recipe_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/discovery_item_image_iv"
-        android:layout_alignRight="@id/discovery_item_image_iv"
+        android:layout_alignLeft="@id/recipe_image_iv"
+        android:layout_alignRight="@id/recipe_image_iv"
         android:layout_centerVertical="false"
         android:layout_marginEnd="@dimen/discovery_item_image_text_margin"
         android:layout_marginStart="@dimen/discovery_item_image_text_margin"
@@ -31,7 +31,7 @@
         tools:text="TextView Text Above ImageView" />
 
     <ProgressBar
-        android:id="@+id/discovery_item_loading_pb"
+        android:id="@+id/recipe_loading_pb"
         android:layout_width="match_parent"
         android:layout_height="@dimen/discovery_item_loading_height"
         android:layout_margin="@dimen/discovery_item_loading_margin"
