--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -1,39 +1,67 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- A CardView that contains a TextView -->
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recipe_card_cv"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_margin="8dp"
+    card_view:cardCornerRadius="4dp">
 
-    <ImageView
-        android:id="@+id/recipe_image_iv"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/discovery_item_height"
-        android:scaleType="centerCrop"
-        tools:src="@drawable/bg_recipe_thumb">
+        android:layout_height="match_parent">
 
-    </ImageView>
+        <ImageView
+            android:id="@+id/recipe_image_iv"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/recipe_image_height"
+            android:scaleType="centerCrop"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/bg_recipe_thumb">
 
-    <TextView
-        android:id="@+id/recipe_title_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/recipe_image_iv"
-        android:layout_alignRight="@id/recipe_image_iv"
-        android:layout_centerVertical="false"
-        android:layout_marginEnd="@dimen/discovery_item_image_text_margin"
-        android:layout_marginStart="@dimen/discovery_item_image_text_margin"
-        android:layout_marginTop="@dimen/discovery_item_image_text_margin_top"
-        android:gravity="center"
-        android:textColor="@android:color/white"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        tools:text="TextView Text Above ImageView" />
+        </ImageView>
 
-    <ProgressBar
-        android:id="@+id/recipe_loading_pb"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/discovery_item_loading_height"
-        android:layout_margin="@dimen/discovery_item_loading_margin"
-        android:visibility="gone" />
-</RelativeLayout>
+        <TextView
+            android:id="@+id/recipe_title_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/recipe_title_margin"
+            android:gravity="start"
+            android:textSize="@dimen/recipe_title_text_size"
+            android:textStyle="bold"
+            android:visibility="visible"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@id/recipe_image_iv"
+            tools:text="Cheese Cake" />
+
+        <TextView
+            android:id="@+id/recipe_summary_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/recipe_title_margin"
+            android:gravity="start"
+            android:textSize="@dimen/recipe_title_summary_size"
+            android:visibility="visible"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@id/recipe_title_tv"
+            tools:text="@tools:sample/lorem/random" />
+
+        <ProgressBar
+            android:id="@+id/recipe_loading_pb"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/discovery_item_loading_height"
+            android:layout_margin="@dimen/discovery_item_loading_margin"
+            android:visibility="gone"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</android.support.v7.widget.CardView>
