JB: Added an Up button to StepsDetails to go back + Vectors support library

--- a/app/src/main/res/layout/activity_step_detail.xml
+++ b/app/src/main/res/layout/activity_step_detail.xml
@@ -47,6 +47,6 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@+id/step_detail_container"
         app:layout_anchorGravity="top|end"
-        app:srcCompat="@android:drawable/stat_notify_chat" />
+        app:srcCompat="@drawable/ic_arrow_upward_black_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
