--- a/app/src/main/res/layout/activity_step_list.xml
+++ b/app/src/main/res/layout/activity_step_list.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_media_play" />
+        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />
 
 
 </android.support.design.widget.CoordinatorLayout>
