JB: Added scroll view to step_list.xml

--- a/app/src/main/res/layout-w900dp/step_list.xml
+++ b/app/src/main/res/layout-w900dp/step_list.xml
@@ -29,10 +29,15 @@
         tools:context="com.example.android.bakingapp.activity.StepListActivity"
         tools:listitem="@layout/step_list_content" />
 
-    <FrameLayout
-        android:id="@+id/step_detail_container"
+    <ScrollView
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3" />
+        android:layout_weight="3">
+
+        <FrameLayout
+            android:id="@+id/step_detail_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </ScrollView>
 
 </LinearLayout>
