--- a/app/src/main/res/layout/fragment_step_detail_ingredients.xml
+++ b/app/src/main/res/layout/fragment_step_detail_ingredients.xml
@@ -1,49 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?><!--Ingredients Container-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ingredients_container_ll"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginEnd="@dimen/movie_detail_row_margin_h"
-    android:layout_marginStart="@dimen/movie_detail_row_margin_h"
-    android:layout_marginTop="@dimen/movie_detail_subrow_margin_v"
-    android:orientation="horizontal">
-
-    <!--TODO Remove me, I look ugly-->
-    <TextView
-        android:id="@+id/step_header_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/movie_detail_row_margin_h"
-        android:layout_marginStart="@dimen/movie_detail_row_margin_h"
-        android:gravity="start|center_vertical"
-        android:text="@string/ingredients_label"
-        android:textSize="@dimen/movie_detail_paragraph_text_size"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!--TODO Remove me, I look ugly-->
-    <!--Horizontal Separator-->
-    <View
-        android:id="@+id/separator_v"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/movie_detail_sub_separator_thickness"
-        android:layout_marginTop="@dimen/movie_detail_subrow_margin_v"
-        android:background="@android:color/darker_gray"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/step_header_tv" />
-
-    <!--Ingredients Container-->
-    <LinearLayout
-        android:id="@+id/ingredients_container_ll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/separator_v" />
-
-</android.support.constraint.ConstraintLayout>
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginTop="@dimen/step_details_margin_top"/>
