--- a/app/src/main/res/layout/fragment_step_detail_ingredients_item.xml
+++ b/app/src/main/res/layout/fragment_step_detail_ingredients_item.xml
@@ -13,26 +13,28 @@
         android:id="@+id/quantity_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/movie_detail_row_margin_h"
-        android:layout_marginStart="@dimen/movie_detail_row_margin_h"
         android:gravity="start|center_vertical"
         android:textSize="@dimen/movie_detail_paragraph_text_size"
-        app:layout_constraintEnd_toStartOf="@id/ingredient_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="2.5 Kg" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.25" />
 
     <TextView
         android:id="@+id/ingredient_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/movie_detail_row_margin_h"
-        android:layout_marginStart="@dimen/movie_detail_row_margin_h"
         android:gravity="start|center_vertical"
         android:textSize="@dimen/movie_detail_paragraph_text_size"
         app:layout_constraintBaseline_toBaselineOf="@+id/quantity_tv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/quantity_tv"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         tools:text="Watermelons" />
 
 </android.support.constraint.ConstraintLayout>
