--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,8 @@
     <dimen name="recipe_title_text_size">32sp</dimen>
     <dimen name="recipe_title_summary_size">16sp</dimen>
     <dimen name="step_player_height">220dp</dimen>
+    <dimen name="step_details_margin_top">24dp</dimen>
+    <dimen name="step_details_margin_h">8dp</dimen>
 
 
     <!--RENAME-->
