--- a/app/src/main/res/layout-w900dp/step_list.xml
+++ b/app/src/main/res/layout-w900dp/step_list.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
@@ -21,10 +19,9 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/step_list"
         android:name="com.example.android.bakingapp.activity.StepListFragment"
-        android:layout_width="@dimen/item_width"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_weight="1"
         app:layoutManager="LinearLayoutManager"
         tools:context="com.example.android.bakingapp.activity.StepListActivity"
         tools:listitem="@layout/step_list_content" />
