--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,10 @@
     <dimen name="step_player_height">220dp</dimen>
     <dimen name="step_details_margin_top">24dp</dimen>
     <dimen name="step_details_margin_h">8dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="app_bar_height">200dp</dimen>
+    <dimen name="text_margin">8dp</dimen>
+    <dimen name="item_margin">8dp</dimen>
 
 
     <!--RENAME-->
@@ -20,8 +24,4 @@
     <dimen name="movie_detail_row_margin_h">16dp</dimen>
     <dimen name="movie_detail_subrow_margin_v">8dp</dimen>
     <dimen name="movie_detail_sub_separator_thickness">1dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="app_bar_height">200dp</dimen>
-    <dimen name="item_width">200dp</dimen>
-    <dimen name="text_margin">16dp</dimen>
 </resources>
