--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,7 +13,15 @@
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="text_margin">8dp</dimen>
     <dimen name="item_margin">8dp</dimen>
+    <dimen name="widget_image_height">38dp</dimen>
+    <dimen name="widget_title_size">24sp</dimen>
+    <dimen name="widget_summary_size">16sp</dimen>
 
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
 
     <!--RENAME-->
     <dimen name="discovery_item_loading_height">70dp</dimen>
@@ -24,4 +32,5 @@
     <dimen name="movie_detail_row_margin_h">16dp</dimen>
     <dimen name="movie_detail_subrow_margin_v">8dp</dimen>
     <dimen name="movie_detail_sub_separator_thickness">1dp</dimen>
+
 </resources>
