--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,7 +17,7 @@
     <dimen name="widget_title_size">24sp</dimen>
     <dimen name="widget_summary_size">16sp</dimen>
 
-    <!--
+    <!-- TODO widget margin
 Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
@@ -26,11 +26,8 @@ http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     <!--RENAME-->
     <dimen name="discovery_item_loading_height">70dp</dimen>
     <dimen name="discovery_item_loading_margin">8dp</dimen>
-    <dimen name="discovery_item_image_text_margin">4dp</dimen>
-    <dimen name="discovery_item_image_text_margin_top">16dp</dimen>
     <dimen name="movie_detail_paragraph_text_size">16sp</dimen>
     <dimen name="movie_detail_row_margin_h">16dp</dimen>
     <dimen name="movie_detail_subrow_margin_v">8dp</dimen>
-    <dimen name="movie_detail_sub_separator_thickness">1dp</dimen>
 
 </resources>
