--- a/app/src/main/res/xml/recipe_widget_info.xml
+++ b/app/src/main/res/xml/recipe_widget_info.xml
@@ -8,4 +8,4 @@
     android:previewImage="@drawable/bg_recipe_thumb"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen" />
